--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,10 +15,15 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Write .env file
-        if: ${{ secrets.ENV_FILE != '' }}
+        env:
+          ENV_FILE_CONTENT: ${{ secrets.ENV_FILE }}
         run: |
-          printf '%s' "${{ secrets.ENV_FILE }}" > .env
-          chmod 600 .env
+          if [ -n "$ENV_FILE_CONTENT" ]; then
+            printf '%s' "$ENV_FILE_CONTENT" > .env
+            chmod 600 .env
+          else
+            echo "No ENV_FILE secret provided; skipping .env creation."
+          fi
 
       - name: Load SSH key
         uses: webfactory/ssh-agent@v0.9.0
