--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,17 +14,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Write .env file
-        env:
-          ENV_FILE_CONTENT: ${{ secrets.ENV_FILE }}
-        run: |
-          if [ -n "$ENV_FILE_CONTENT" ]; then
-            printf '%s' "$ENV_FILE_CONTENT" > .env
-            chmod 600 .env
-          else
-            echo "No ENV_FILE secret provided; skipping .env creation."
-          fi
-
       - name: Load SSH key
         uses: webfactory/ssh-agent@v0.9.0
         with:
@@ -39,10 +28,12 @@ jobs:
 
       - name: Sync project to VPS
         run: |
+          set -euo pipefail
           rsync -az --delete \
             --exclude '.git/' \
             --exclude '.github/' \
             --exclude '__pycache__/' \
+            --exclude '.env' \
             ./ "$DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH"
         env:
           DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
