--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,47 +4,37 @@ on:
   push:
     branches:
       - master
-  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Load SSH key
-        uses: webfactory/ssh-agent@v0.9.0
-        with:
-          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
-
-      - name: Trust VPS host key
-        run: |
-          mkdir -p ~/.ssh
-          ssh-keyscan -H "$DEPLOY_HOST" >> ~/.ssh/known_hosts
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@v1.0.3
         env:
-          DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
-
-      - name: Sync project to VPS
-        run: |
-          set -euo pipefail
-          rsync -az --delete \
-            --exclude '.git/' \
-            --exclude '.github/' \
-            --exclude '__pycache__/' \
-            --exclude '.env' \
-            ./ "$DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH"
-        env:
-          DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
-          DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
           DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
-
-      - name: Run remote deploy script
-        run: |
-          ssh "$DEPLOY_USER@$DEPLOY_HOST" "cd '$DEPLOY_PATH' && ${DEPLOY_COMMAND:-./deploy.sh}"
-        env:
-          DEPLOY_HOST: ${{ secrets.DEPLOY_HOST }}
-          DEPLOY_USER: ${{ secrets.DEPLOY_USER }}
-          DEPLOY_PATH: ${{ secrets.DEPLOY_PATH }}
+          ENV_FILE: ${{ secrets.ENV_FILE }}
           DEPLOY_COMMAND: ${{ secrets.DEPLOY_COMMAND }}
+        with:
+          host: ${{ secrets.DEPLOY_HOST }}
+          username: ${{ secrets.DEPLOY_USER }}
+          key: ${{ secrets.DEPLOY_KEY }}
+          envs: DEPLOY_PATH,ENV_FILE,DEPLOY_COMMAND
+          script: |
+            set -Eeuo pipefail
+            cd "${DEPLOY_PATH}"
+            git fetch --all --prune
+            git reset --hard origin/master
+            if [ -n "${ENV_FILE:-}" ]; then
+              printf '%s' "${ENV_FILE}" > .env
+              chmod 600 .env
+            fi
+            if [ -n "${DEPLOY_COMMAND:-}" ]; then
+              eval "${DEPLOY_COMMAND}"
+            else
+              docker compose down --remove-orphans || true
+              docker compose up --build -d
+            fi
